--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -5,7 +5,7 @@ on:
         branches:
             - master
     schedule:
-        - cron: '5 16 * * *'
+        - cron: '5 8 * * *'
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -23,3 +23,9 @@ jobs:
               env:
                 JD_COOKIE: ${{ secrets.JD_COOKIE }}
                 PUSH_KEY: ${{ secrets.PUSH_KEY }}
+            - name: daily
+              shell: sh
+              run: sh daily.sh
+              env:
+                  SOUCHE_TOKEN: ${{ secrets.SOUCHE_TOKEN }}
+                  SOUCHE_SID: ${{ secrets.SOUCHE_SID }}
